--- a/templates/auteur/index.html.twig
+++ b/templates/auteur/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Categorie index{% endblock %}
+{% block title %}Auteur index{% endblock %}
 
 {% block body %}
-    <h1>Categorie index</h1>
+    <h1>Auteur index</h1>
 
     <table class="table">
         <thead>
@@ -13,13 +13,11 @@
         </tr>
         </thead>
         <tbody>
-        {% for categorie in categories %}
+        {% for auteur in auteurs %}
             <tr>
-                <td>{{ categorie.id }}</td>
-                <td>{{ categorie.Nom }}</td>
+                <td>{{ auteur.id }}</td>
+                <td>{{ catauteuregorie.Nom }}</td>
                 <td>
-                    <a href="{{ path('app_categorie_show', {'id': categorie.id}) }}">show</a>
-                    <a href="{{ path('app_categorie_edit', {'id': categorie.id}) }}">edit</a>
 
                 </td>
             </tr>
@@ -30,7 +28,6 @@
         {% endfor %}
         </tbody>
     </table>
-    <a href="{{ path('app_categorie_new') }}">Create new</a>
 
 
 {% endblock %}
