--- a/templates/auteur/index.html.twig
+++ b/templates/auteur/index.html.twig
@@ -16,8 +16,10 @@
         {% for auteur in auteurs %}
             <tr>
                 <td>{{ auteur.id }}</td>
-                <td>{{ catauteuregorie.Nom }}</td>
+                <td>{{ auteur.Nom }}</td>
                 <td>
+                    <a href="{{ path('app_auteur_show', {'id': auteur.id}) }}">show</a>
+                    <a href="{{ path('app_auteur_edit', {'id': auteur.id}) }}">edit</a>
 
                 </td>
             </tr>
@@ -28,6 +30,7 @@
         {% endfor %}
         </tbody>
     </table>
+    <a href="{{ path('app_auteur_new') }}">Create new</a>
 
 
 {% endblock %}
