--- a/templates/categorie/new.html.twig
+++ b/templates/categorie/new.html.twig
@@ -1,1 +1,15 @@
-{{ form(form) }}
+{% extends 'base.html.twig' %}
+
+{% block title %}Créer catégorie{% endblock %}
+
+{% block body %}
+        <h1>
+            Création d'une nouvelle catégorie
+        </h1>
+
+        {{ form(form) }}
+        <a href="{{ path('app_categorie_index') }}" class="btn btn-secondary">Retour</a>
+
+
+
+{% endblock %}
