--- a/templates/categorie/index.html.twig
+++ b/templates/categorie/index.html.twig
@@ -4,12 +4,14 @@
 
 {% block body %}
     <h1>Categorie index</h1>
+    <a class="btn btn-secondary"href="{{ path('app_categorie_new') }}">Create new</a>
 
-    <table class="table">
+    <table class="table table-striped">
         <thead>
         <tr>
             <th>Id</th>
             <th>Nom</th>
+            <th>Actions</th>
         </tr>
         </thead>
         <tbody>
@@ -18,8 +20,8 @@
                 <td>{{ categorie.id }}</td>
                 <td>{{ categorie.Nom }}</td>
                 <td>
-                    <a href="{{ path('app_categorie_show', {'id': categorie.id}) }}">show</a>
-                    <a href="{{ path('app_categorie_edit', {'id': categorie.id}) }}">edit</a>
+                    <a class="btn btn-primary" href="{{ path('app_categorie_show', {'id': categorie.id}) }}">show</a>
+                    <a class="btn btn-warning" href="{{ path('app_categorie_edit', {'id': categorie.id}) }}">edit</a>
 
                 </td>
             </tr>
@@ -30,7 +32,6 @@
         {% endfor %}
         </tbody>
     </table>
-    <a href="{{ path('app_categorie_new') }}">Create new</a>
 
 
 {% endblock %}
