--- a/templates/livre/index.html.twig
+++ b/templates/livre/index.html.twig
@@ -4,14 +4,16 @@
 
 {% block body %}
     <h1>Livre index</h1>
+    <a class="btn btn-secondary" href="{{ path('app_livre_new') }}">Create new</a>
 
-    <table class="table">
+    <table class="table table-striped">
         <thead>
         <tr>
             <th>Id</th>
             <th>Titre</th>
             <th>Auteur</th>
             <th>Nombre page</th>
+            <th>Actions</th>
 
         </tr>
         </thead>
@@ -23,8 +25,8 @@
                 <td>{{ livre.auteur }}</td>
                 <td>{{ livre.nombrePage }}</td>
                 <td>
-                   <a href="{{ path('app_livre_show', {'id': livre.id}) }}">show</a>
-                    <a href="{{ path('app_livre_edit', {'id': livre.id}) }}">edit</a>
+                   <a class="btn btn-primary" href="{{ path('app_livre_show', {'id': livre.id}) }}">show</a>
+                    <a class="btn btn-warning"href="{{ path('app_livre_edit', {'id': livre.id}) }}">edit</a>
 
                 </td>
             </tr>
@@ -35,7 +37,6 @@
         {% endfor %}
         </tbody>
     </table>
-    <a href="{{ path('app_livre_new') }}">Create new</a>
 
 
 {% endblock %}
