--- a/templates/livre/edit.html.twig
+++ b/templates/livre/edit.html.twig
@@ -7,6 +7,6 @@
 
     {{ form(form) }}
 
-    <a href="{{ path('app_livre_index') }}">back to list</a>
+    <a class="btn btn-secondary" href="{{ path('app_livre_index') }}">back to list</a>
 
 {% endblock %}
